Return dark-red-color value, just needed to tweak red-color

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@
   --link-color: #3b63fb;
   --link-hover-color: #1d3ecf;
   --purple-color: #563b80;
-  --dark-red-color: #931c24;
+  --dark-red-color: #9c1d26;
   --dark-red-link-color:#801c1e;
   --red-color: #d13d3f;
   --gradient-upi-steps-red: linear-gradient(165deg, #ca0919 0%, #8C2034 40%, #732C53 80%, #513873 100%);
