--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -757,10 +757,9 @@
 }
 
 .cards.cards-two-slides {
-  max-width: calc(66% + 40px);
+  /* max-width: calc(66% + 40px); */
   margin-left: auto;
   margin-right: auto;
-  padding: 15px;
 }
 
 /* === EXPERIENCE LIFE & REWARD POINTS VARIANTS === */
