--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -201,7 +201,6 @@ footer .footer ul {
   align-items: center;
 }
 
-
 .footer>div>div:nth-child(3) {
   padding: 50px 0;
   padding-bottom: 27px;
@@ -230,11 +229,6 @@ footer .footer ul {
   line-height: 1;
   font: 400 24px / 1.25rem 'Roboto', sans-serif;
 }
-
-/* .footer>div>div:nth-child(3) .accordion {
-  width: 15%;
-} */
-
 
 .footer>div>div:nth-child(3) .accordion-wrapper .accordion>div,
 .footer>div>div:nth-child(3) .accordion-wrapper .accordion .accordion-item {
@@ -337,7 +331,6 @@ footer .footer>div .section:nth-child(4)>div p a {
     max-width: 100%;
     border: none;
     border-radius: unset;
-    border-bottom: 1px solid #dadada;
     font-weight: 700;
     border-bottom: 1px solid rgba(255, 255, 255, 0.21);
     letter-spacing: .5px;
@@ -416,11 +409,11 @@ footer .footer>div .section:nth-child(4)>div p a {
   }
 
   footer .footer>div .section:nth-child(4)>div ul li:nth-child(2) {
-    padding-bottom: 0px;
+    padding-bottom: 0;
   }
 
   footer .footer>div .section:nth-child(4)>div ul li:nth-child(3) {
-    padding-bottom: 0px;
+    padding-bottom: 0;
   }
 
   .footer>div>div:nth-child(2)>div>ul li>p {
@@ -429,16 +422,12 @@ footer .footer>div .section:nth-child(4)>div p a {
   }
 
   .footer>div>div:nth-child(2)>div>ul>li:nth-child(2)>ul>li:nth-child(2) {
-    display: block;
     display: inline-block;
     height: 48px;
-    min-width: 160px;
-    padding: 10px 30px;
     border-radius: 25px;
     background: #FFFFFF;
     color: var(--dark-red-color) !important;
     text-align: center;
-    line-height: 30px;
     white-space: nowrap;
     border: 0;
     font-size: 16px;
