--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,7 @@
  * OF ANY KIND, either express or implied. See the License for the specific language
  * governing permissions and limitations under the License.
  */
-
+ /* stylelint-disable selector-class-pattern */
 
 :root {
   /* colors */
@@ -32,6 +32,7 @@
   --gradient-pewter: linear-gradient(270deg, #332B28 0%, #514A44 21.11%, #8B837D 50.14%, #625A50 71.74%, #7A766D 90.18%, #433C32 100%);
   --gradient-silver: linear-gradient(208deg, #C8C6C6 0%, #F1F0F0 53.5%, #C8C6C6 100%);
   --metal-blue: linear-gradient(308deg, #110140 4.16%, #1E2A8E 44.91%, #010740 88.8%);
+  --metal-silver: linear-gradient(138deg, #999 -15.44%, #EFEFEF 0.15%, #CACACA 18.04%, #EFEFEF 37.09%, #CACACA 58.44%, #999 76.91%, #EFEFEF 87.3%);
 
   /* bootstrap colors */
   --blue: #007bff;
@@ -92,7 +93,7 @@
 }
 
 *{
-  font-family: "Inter";
+  font-family: var(--body-font-family);
 }
 
 *,
@@ -206,20 +207,15 @@ button {
 }
 
 /* links */
+a {
+  text-decoration: none;
+  color: var(--dark-red-color);
+}
+
 a:any-link {
   color: var(--link-color);
   text-decoration: none;
   word-break: break-word;
-}
-
-a:hover {
-  color: var(--link-hover-color);
-  text-decoration: underline;
-}
-
-a {
-  text-decoration: none;
-  color: var(--dark-red-color);
 }
 
 a:hover {
@@ -528,7 +524,7 @@ main .breadcrumbs {
   }
 
   .section.banner-image .default-content-wrapper ol {
-    display: None;
+    display: none;
   }
 
   .section.banner-image .default-content-wrapper p img {
@@ -615,7 +611,7 @@ main .section.upi-steps-red-bg {
   background-color: #fff;
   border-top: 1px solid #E0E0E0;
   border-bottom: 1px solid #E0E0E0;
-  box-shadow: 0 2px 4px rgba(37, 36, 59, 0.1);
+  box-shadow: 0 2px 4px rgba(37 36 59 / 10%);
 }
 
 /* 
@@ -639,7 +635,7 @@ main .section.upi-steps-red-bg {
 .section.overview-rte-container {
   background-color: var(--light-color);
   margin-top: 0;
-  padding: 42px 0 23px 0;
+  padding: 42px 0 23px;
 }
 
 .section.columns-container h2 {
@@ -688,11 +684,16 @@ section.faq-accordion-container h4 {
 }
 
 .section.pl-blogs-container {
-  background-color: rgba(225, 225, 235, 0.29);
+  background-color: rgb(225 225 235 / 29%);
   padding: 32px 0;
   margin: 0;
 }
 
+
+.section.banner-image>div>ol {
+  position: absolute;
+  top: 3%;
+}
 
 .section.banner-image .default-content-wrapper ol {
   display: flex;
@@ -716,6 +717,10 @@ section.faq-accordion-container h4 {
   pointer-events: none;
 }
 
+.section.banner-image .default-content-wrapper .button-container a {
+  background-color: #9B1E26;
+}
+
 .section.banner-image .default-content-wrapper ol li:nth-child(1) a {
   color: var(--dark-red-color);
   pointer-events: visible;
@@ -736,18 +741,9 @@ section.faq-accordion-container h4 {
   color: var(--dark-red-color);
 }
 
-.section.banner-image .default-content-wrapper .button-container a {
-  background-color: #9B1E26;
-}
-
 .section.banner-image .default-content-wrapper {
   width: 100%;
   height: 580px;
-}
-
-.section.banner-image>div>ol {
-  position: absolute;
-  top: 3%;
 }
 
 .section.banner-image h1 {
@@ -799,7 +795,7 @@ section.faq-accordion-container h4 {
 
 .section.swipper-card-container {
   padding: 20px 0 0;
-  background-color: rgba(239, 223, 211, 0.5);
+  background-color: rgba(239 223 211 / 50%);
   margin: 0;
 }
 
@@ -826,9 +822,9 @@ section.faq-accordion-container h4 {
 
 .section.highlight.hero-banner.banner-image.columns-container {
   position: relative;
+
   /* This is critical for absolute positioning */
   width: 100%;
-  /* max-height: 580px; */
   height: 580px;
   padding: unset;
 }
