--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -90,10 +90,14 @@
 }
 
 .accordion details summary {
+  position: relative;
+  padding-right: 46px;
+  cursor: pointer;
+  list-style: none;
   transition: all 0.2s ease-in-out;
-  padding: 20px 16px 0;
+  padding: 20px 20px 0;
   font-weight: 400;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, .22);
+  border-bottom: 1px solid #c8c6c6;
 }
 
 .accordion details[open], .accordion details[open] summary {
@@ -125,7 +129,6 @@
 .dark-scheme {
 
   .accordion details summary {
-    border-bottom: 1px solid #c8c6c6;
     color: var(--text-color);
   }
   
@@ -134,6 +137,11 @@
     background: var(--white);
     color: var(--text-color);
     transition: all 0.2s ease-in-out;
+    border-bottom: 0;
+
+    > p > strong {
+      font-weight: 600;
+    }
   }
   
   .accordion .accordion-cta {
@@ -141,7 +149,6 @@
   }
 
   .accordion details summary {
-    border-bottom: 1px solid #9A9A9A;
     color: #c7c7c7;
 
     > p > strong {
