--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -25,7 +25,7 @@ footer {
 } */
 
 footer .footer>div .section>div {
-  max-width: 1200px;
+  max-width: 75%;
   margin: 0 auto;
   /* padding: 50px 0px; */
   /* padding-top: 50px; */
@@ -40,7 +40,79 @@ footer .footer ul {
 
 .footer>div>div {
   display: flex;
-  padding: 50px 0;
+  padding: 35px 0;
+  flex-direction: column;
+}
+
+.footer .section.accordion-container:first-child > .default-content {width: 100%;padding-left: 15px;padding-right: 15px;margin-bottom: 45px;padding-top: 35px;padding-bottom: 15px;}
+
+.footer .section.accordion-container:first-child > .default-content > h6 {
+  color: rgb(188, 59, 69);
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 36px;
+  letter-spacing: 3.6px;
+  margin: unset;
+}
+
+.footer .section.accordion-container:first-child > .default-content > h5 {
+  color: rgb(188, 59, 69);
+  font-family: Inter;
+  font-size: 77px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 77px;
+  letter-spacing: -0.77px;
+  padding-top: 6px;
+  margin: unset;
+}
+
+.footer .section.accordion-container:first-child > .default-content > p {
+  position: relative;
+  display: none;
+  
+}
+
+/* Back to Top Button - styled like IDFC FIRST Bank's TOP button */
+.footer .section.accordion-container:first-child > .default-content > p > a {
+  position: absolute;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  background: #FFCB05;
+  font-size: 12px;
+  font-weight: 700;
+  color: #525252;
+  right: 0;
+}
+
+.footer .section.accordion-container:first-child > .default-content > p > a::before {
+  content: "\e903";
+  color: #525252;
+  font-size: 20px;
+  font-family: 'icomoon';
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+}
+
+/* Only show TOP button on screens wider than 1200px */
+@media (min-width: 1200px) {
+  .footer .section.accordion-container:first-child > .default-content > p {
+    display: flex;
+  }
 }
 
 .footer>div>div .accordion-wrapper {
@@ -101,13 +173,13 @@ footer .footer ul {
 .footer>div>div .accordion-wrapper .accordion>div>div:first-child ::after,
 .footer>div>div .accordion-wrapper .accordion .accordion-item-label::after {
   display: block;
-  top: 26%;
+  top: 43%;
   background: url(/icons/icon-plus.svg);
   background-position: center;
   background-repeat: no-repeat;
   transform: translateY(-50%);
-  width: 14px;
-  height: 14px;
+  width: 21px;
+  height: 21px;
   border: unset;
 }
 
@@ -123,7 +195,9 @@ footer .footer ul {
 .footer>div>div .accordion-wrapper .accordion .accordion-item-label p {
   font-size: 14px;
   font-weight: 700;
-  font: 700 1rem / 1.25rem 'Roboto', sans-serif;
+  font: 14px "Inter", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.6px;
 }
 
 .footer>div>div .accordion-wrapper .accordion details[open],
@@ -144,14 +218,15 @@ footer .footer ul {
 .footer>div>div .accordion-wrapper .accordion .accordion-item-body ul li {
   margin-top: 12px;
   list-style: none;
+  line-height: 1;
 }
 
 .footer>div>div .accordion-wrapper .accordion>div>div:nth-child(2) ul li a,
 .footer>div>div .accordion-wrapper .accordion .accordion-item-body ul li a {
   color: #FFFFFF;
-  font-size: 14px;
-  /* font-weight: 300; */
-  font: 500 1rem / 1.25rem 'Roboto', sans-serif;
+  font: 14px "Inter", sans-serif;
+  font-weight: 200;
+  word-break: unset;
 }
 
 .footer>div>div:nth-child(2),
@@ -172,11 +247,23 @@ footer .footer ul {
 }
 
 .footer>div>div:nth-child(2)>div>ul>li {
-  flex: 0 0 30.8%;
-  max-width: 30.8%;
   padding-right: 15px;
   padding-left: 15px;
 }
+
+.footer>div>div:nth-child(2)>div>ul>li:nth-child(1) {
+  flex: 0 0 25%;
+}
+
+.footer>div>div:nth-child(2)>div>ul>li:nth-child(2) {
+  flex: 0 0 50%;
+  justify-items: anchor-center;
+}
+
+.footer>div>div:nth-child(2)>div>ul>li:nth-child(3) {
+  flex: 0 0 25%;
+}
+
 
 .footer>div>div:nth-child(2)>div>ul>li:nth-child(2)>ul>li {
   text-align: center;
@@ -187,13 +274,13 @@ footer .footer ul {
   width: 56px;
   background: #fff;
   padding: 2px;
-  margin-left: 84px;
 }
 
 .footer>div>div:nth-child(2)>div>ul li>p {
+  font-size: 14px;
+  font-weight: 700;
   padding-bottom: 16px;
-  letter-spacing: .5px;
-  font: 700 1rem / 1.25rem Roboto, sans-serif;
+  letter-spacing: 0.5px;
 }
 
 .footer>div>div:nth-child(2)>div>ul>li>ul {
@@ -206,21 +293,41 @@ footer .footer ul {
 
 .footer>div>div:nth-child(2)>div>ul>li>ul li {
   margin: 0 30px 0 0;
-  display: flex;
   align-items: center;
 }
 
 .footer>div>div:nth-child(3) {
-  padding: 50px 0;
-  padding-bottom: 27px;
+  padding: 50px 15px;
   display: flex;
-  align-items: center;
+  text-size-adjust: auto;
   position: relative;
+  max-width: 75%;
+  width: 100%;
+  margin: 0 auto;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer>div>div:nth-child(3) .block-content.accordion-wrapper > .accordion.block {
+  margin: 0;
+}
+
+.footer>div>div:nth-child(3) .block-content.accordion-wrapper > .accordion.block > .accordion-item > .accordion-item-label {
+  margin: 0;
+  padding: 0;
 }
 
 .footer>div>div:nth-child(3)>div {
-  /* width: auto; */
+  width: auto;
   position: relative;
+  margin: 0;
+}
+
+.footer>div>div:nth-child(3) h3 {
+  line-height: 1;
+  font-weight: 300;
+  font: 24px 'Inter', sans-serif;
 }
 
 .footer>div>div:nth-child(3) .default-content-wrapper {
@@ -243,16 +350,19 @@ footer .footer ul {
 .footer>div>div:nth-child(3) .accordion-wrapper .accordion .accordion-item {
   flex: 0 0 100%;
   max-width: 100%;
+  overflow: visible;
 }
 
 footer .footer>div .section:nth-child(4) {
   background-color: #FFFFFF;
   color: #0D0D0D;
+  font-weight: 200;
+  font-size: 12px;
   padding-bottom: 30px;
 }
 
 .footer>div>div:nth-child(3) .accordion-wrapper .accordion .accordion-item .accordion-item-label::after {
-  left: 115px;
+  left: 102px;
 }
 
 .footer .accordion-wrapper .accordion .accordion-item[open] .accordion-item-label {
@@ -260,22 +370,27 @@ footer .footer>div .section:nth-child(4) {
 }
 
 footer .footer>div .section:nth-child(4)>div {
+  width: 100%;
   display: flex;
   align-items: flex-start;
+  justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 footer .footer>div .section:nth-child(4)>div ul li {
-  font: 300 1rem / 1.25rem Roboto, sans-serif;
-  line-height: 23px;
-  padding-bottom: 16px;
+  font: 12px "Inter", sans-serif;
+  font-weight: 200;
+  line-height: 1;
+  padding-bottom: 10px;
   color: #0D0D0D;
 }
 
 footer .footer>div .section:nth-child(4)>div p a {
-  font: 300 1rem / 1.25rem Roboto, sans-serif;
-  line-height: 23px;
-  padding-bottom: 16px;
-  color: #0D0D0D;
+  color: #9d1d27;
+  font-weight: 600;
+  margin: 0 5px;
+  font-size: 12px;
 }
 
 .footer>div>div:nth-child(2)>div>ul>li:last-child>ul>li .icon {
@@ -308,7 +423,10 @@ footer .footer>div .section:nth-child(4)>div p a {
   .footer .section.accordion-container:first-of-type .accordion-wrapper .accordion .accordion-item[open] .accordion-item-label::after {
     display: block;
   }
-
+  
+  .footer .section.accordion-container:first-child > .default-content {
+  margin-bottom: 0;
+  }
 
   footer .footer>div {
     display: flex;
@@ -317,6 +435,16 @@ footer .footer>div .section:nth-child(4)>div p a {
 
   footer .footer>div .section>div {
     padding: 0 15px;
+  }
+  
+  .footer>div>div:nth-child(3)>div {
+  width: 100%;
+  }
+
+  .footer>div>div:nth-child(3) .accordion-wrapper .accordion .accordion-item .accordion-item-label::after {
+    display: block;
+    left: unset;
+    right: 4px;
   }
 
   .footer>div>div:nth-child(2),
@@ -361,6 +489,26 @@ footer .footer>div .section:nth-child(4)>div p a {
     padding: 0;
     order: 2;
     padding-bottom: 14px;
+    flex-direction: column;
+    max-width: unset;
+  }
+
+  .footer .section.accordion-container:first-child > .default-content > h6 {
+    color: #D23643;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 2px;
+  }
+
+  .footer .section.accordion-container:first-child > .default-content > h5 {
+    color: #D23643;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 50px;
+    letter-spacing: -0.5px;
+    padding-top: 4px;
   }
 
   footer .footer>div .section:nth-child(4) {
@@ -388,10 +536,6 @@ footer .footer>div .section:nth-child(4)>div p a {
   .footer>div>div .accordion-wrapper .accordion .accordion-item-label p {
     font-size: 14px;
     line-height: 20px;
-  }
-
-  .footer>div>div .accordion-wrapper .accordion .accordion-item-body ul li a {
-    font: 400 14px / 14px 'Roboto', sans-serif;
   }
 
   .footer>div>div .accordion-wrapper .accordion .accordion-item-body ul {
@@ -472,12 +616,12 @@ footer .footer>div .section:nth-child(4)>div p a {
     border-bottom: unset;
   }
 
-  .footer>div>div:nth-child(3) .accordion-wrapper .accordion .accordion-item .accordion-item-label::after {
-    left: unset;
-  }
-
   .footer .accordion-wrapper .accordion .accordion-item[open] .accordion-item-label {
     border-bottom: unset;
+  }
+
+  .footer>div>div:nth-child(3) h3 {
+    display: none;
   }
 
 }
