--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -297,7 +297,7 @@ footer .footer ul {
 }
 
 .footer>div>div:nth-child(3) {
-  padding: 50px 15px;
+  padding: 50px 15px 24px 15px;
   display: flex;
   text-size-adjust: auto;
   position: relative;
@@ -394,6 +394,10 @@ footer .footer>div .section:nth-child(4)>div ul li {
   line-height: 1;
   padding-bottom: 10px;
   color: #0D0D0D;
+}
+
+footer .footer>div .section:nth-child(4)>div ul li:last-child {
+  padding-bottom: 0;
 }
 
 footer .footer>div .section:nth-child(4)>div p a {
